@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-10T01:22:03Z",
+  "timestamp" : "2022-08-10T08:19:05Z",
   "count_outdated" : 290,
   "uniques_outdated" : 144,
-  "count" : 304,
+  "count" : 303,
   "uniques" : 154,
   "clones" : [
     {
       "timestamp": "2022-07-27T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
